[GraphQL] - It builds and runs